--- a/eks-control-plane-events-blueprints/app/Dockerfile
+++ b/eks-control-plane-events-blueprints/app/Dockerfile
@@ -1,8 +1,15 @@
 FROM python:latest
 
+#create work dir
 ADD . /app
 WORKDIR /app
-COPY ./event_loop.py /event_loop.py
+
+#Copy the script
+COPY ./event_watcher.py /event_watcher.py
+
+#Copy the dependencies
 COPY ./requirements.txt /requirements.txt
 RUN pip3 install -r /requirements.txt
-CMD ["python","-u","event_loop.py"]
+
+#Run the script
+CMD ["python","-u","event_watcher.py","pod,namespace,node,service,pvc"]
