--- a/eks-control-plane-events-blueprints/k8s_utils/deployment.yaml
+++ b/eks-control-plane-events-blueprints/k8s_utils/deployment.yaml
@@ -16,4 +16,4 @@ spec:
     spec:
       containers:
       - name: cpe
-        image: ACCOUNTID.dkr.ecr.us-east-1.amazonaws.com/ECR_REPO_URI:TAG
+        image: $ACCOUNTID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO
